--- a/seandouganwebsite/src/css/main.scss
+++ b/seandouganwebsite/src/css/main.scss
@@ -1,2 +1,3 @@
-@import '../node_modules/bootstrap/scss/bootstrap';
-@import  'Styles/_customVariables.scss';
+@import  '_customVariables.scss';
+@import '_Layout.scss';
+@import 'bootstrap';
