global.json project sdk config base - typescript support -  jest support - babel

--- a/seandouganwebsite/Views/Shared/_Layout.cshtml
+++ b/seandouganwebsite/Views/Shared/_Layout.cshtml
@@ -4,6 +4,12 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - Sean Dougan Portfolio</title>
+    <!-- opengraph !-->
+    <meta property="og:title" content="How to Become an SEO Expert (8 Steps)" />
+    <meta property="og:description" content="Get from SEO newbie to SEO pro in 8 simple steps." />
+    <meta property="og:image" content="https://ahrefs.com/blog/wp-content/uploads/2019/12/fb-how-to-become-an-seo-expert.png" />
+    <!-- twitter !-->
+    
     <link rel="stylesheet" href="~/dist/main.css" asp-append-version="true" />
 </head>
 <body>
